--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,97 +9,113 @@ android:background="#ffffff"
     android:id="@+id/baseLayout"
     android:textAlignment="center">
 
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/iftm_with_words"
-        android:contentDescription="@string/logo" />
-
-    <RelativeLayout
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/quizBar">
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:id="@+id/linearLayout1">
 
-        <CheckBox
-            android:layout_gravity="center"
+        <ImageView
             android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/iftm_with_words"
+            android:contentDescription="@string/logo" />
+
+        <RelativeLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/quizBar">
+
+            <CheckBox
+                android:paddingTop="5dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/questionBtn1"
+                android:text="Btn1"
+                android:layout_above="@+id/questionBtn2"
+                android:layout_centerHorizontal="true"
+                android:textColor="#000000"
+                android:buttonTint="@color/colorAccent"
+                />
+
+            <CheckBox
+                android:paddingTop="5dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/questionBtn2"
+                android:text="Btn1"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@+id/questionBtn1"
+                android:layout_alignStart="@+id/questionBtn1"
+                android:textColor="#000000"
+                android:buttonTint="@color/colorAccent"
+                />
+
+            <CheckBox
+                android:paddingTop="5dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/questionBtn3"
+                android:text="Btn1"
+                android:layout_below="@+id/questionBtn2"
+                android:layout_alignLeft="@+id/questionBtn2"
+                android:layout_alignStart="@+id/questionBtn2"
+                android:textColor="#000000"
+                android:buttonTint="@color/colorAccent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/label"
+                android:layout_above="@+id/questionBtn1"
+                android:layout_centerHorizontal="true"
+                android:textColor="#000000"
+                android:gravity="center"
+                android:paddingBottom="16dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/questionBtn1"
-            android:text="Btn1"
-            android:layout_above="@+id/questionBtn2"
-            android:layout_centerHorizontal="true"
-            android:textColor="#000000"/>
+            android:id="@+id/bottomBar">
 
-        <CheckBox
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/questionBtn2"
-            android:text="Btn1"
-            android:layout_centerVertical="true"
-            android:layout_alignLeft="@+id/questionBtn1"
-            android:layout_alignStart="@+id/questionBtn1"
-            android:textColor="#000000"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Não"
+                android:id="@+id/noBtn"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-        <CheckBox
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/questionBtn3"
-            android:text="Btn1"
-            android:layout_below="@+id/questionBtn2"
-            android:layout_alignLeft="@+id/questionBtn2"
-            android:layout_alignStart="@+id/questionBtn2"
-            android:textColor="#000000"
-            android:checked="false"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sim"
+                android:id="@+id/yesBtn"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/label"
-            android:layout_above="@+id/questionBtn1"
-            android:layout_centerHorizontal="true"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:paddingBottom="16dp"/>
+    </LinearLayout>
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomBar">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Não"
-            android:id="@+id/noBtn"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sim"
-            android:id="@+id/yesBtn"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-    </RelativeLayout>
-
-</LinearLayout>
+        android:indeterminate="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/progressBar"/>
 
     <WebView
         android:layout_width="0dp"
