--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
+    <!--<color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#007C00</color>
-    <color name="colorAccent">#007C00</color>
+    <color name="colorAccent">#007C00</color>-->
+    <color name="colorPrimary">#66DC2C</color>
+    <color name="colorPrimaryDark">#007C00</color>
+    <color name="colorAccent">#66DC2C</color>
 </resources>
