Set remote server as default

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimary">#66DC2C</color>
     <color name="colorPrimaryDark">#007C00</color>
     <color name="colorAccent">#66DC2C</color>
+    <color name="WHITE">#ffffff</color>
 </resources>
